Update competitionsTracker.java